--- a/src/cinnamon/cinnamon-dark-yellow.css
+++ b/src/cinnamon/cinnamon-dark-yellow.css
@@ -1123,7 +1123,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
   background-color: rgba(133, 143, 162, 0.35);
   border: 1px solid rgba(53, 59, 69, 0.35);
   box-shadow: none;
-  background-color: #16171a;
+  background-color: #1d1f22;
   border-color: #DEB974;
 }
 
@@ -2028,16 +2028,16 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .workspace-graph .workspace .windows {
-  -active-window-background: #40444b;
+  -active-window-background: #474b53;
   -active-window-border: rgba(0, 0, 0, 0.8);
-  -inactive-window-background: #40444b;
+  -inactive-window-background: #474b53;
   -inactive-window-border: rgba(0, 0, 0, 0.8);
 }
 
 .workspace-graph .workspace:active .windows {
-  -active-window-background: #4c5059;
+  -active-window-background: #535861;
   -active-window-border: rgba(0, 0, 0, 0.8);
-  -inactive-window-background: #292b2f;
+  -inactive-window-background: #303238;
   -inactive-window-border: rgba(0, 0, 0, 0.8);
 }
 
