--- a/src/gtk/gtk-4.0/gtk-light-blue.css
+++ b/src/gtk/gtk-4.0/gtk-light-blue.css
@@ -8332,7 +8332,7 @@ menubutton.flat.popup.sources-button > button image.calendar-color-image {
 @define-color wm_icon_active_bg #FAFAFA;
 @define-color budgie_tasklist_indicator_color #5079BE;
 @define-color budgie_tasklist_indicator_color_active #5079BE;
-@define-color budgie_tasklist_indicator_color_active_window #99b0d7;
+@define-color budgie_tasklist_indicator_color_active_window #96add5;
 @define-color budgie_tasklist_indicator_color_attention #CE9C3D;
 @define-color STRAWBERRY_100 #FF9262;
 @define-color STRAWBERRY_300 #FF793E;
