--- a/src/gtk/gtk-4.0/gtk-light-cyan.css
+++ b/src/gtk/gtk-4.0/gtk-light-cyan.css
@@ -8332,7 +8332,7 @@ menubutton.flat.popup.sources-button > button image.calendar-color-image {
 @define-color wm_icon_active_bg #FAFAFA;
 @define-color budgie_tasklist_indicator_color #3A8B84;
 @define-color budgie_tasklist_indicator_color_active #3A8B84;
-@define-color budgie_tasklist_indicator_color_active_window #8dbab8;
+@define-color budgie_tasklist_indicator_color_active_window #8ab7b6;
 @define-color budgie_tasklist_indicator_color_attention #CE9C3D;
 @define-color STRAWBERRY_100 #FF9262;
 @define-color STRAWBERRY_300 #FF793E;
