--- a/src/gtk/gtk-4.0/gtk-light-green.css
+++ b/src/gtk/gtk-4.0/gtk-light-green.css
@@ -8332,7 +8332,7 @@ menubutton.flat.popup.sources-button > button image.calendar-color-image {
 @define-color wm_icon_active_bg #FAFAFA;
 @define-color budgie_tasklist_indicator_color #608E32;
 @define-color budgie_tasklist_indicator_color_active #608E32;
-@define-color budgie_tasklist_indicator_color_active_window #a1bc8b;
+@define-color budgie_tasklist_indicator_color_active_window #9fb989;
 @define-color budgie_tasklist_indicator_color_attention #CE9C3D;
 @define-color STRAWBERRY_100 #FF9262;
 @define-color STRAWBERRY_300 #FF793E;
