--- a/src/gtk/gtk-4.0/gtk-light-red.css
+++ b/src/gtk/gtk-4.0/gtk-light-red.css
@@ -8332,7 +8332,7 @@ menubutton.flat.popup.sources-button > button image.calendar-color-image {
 @define-color wm_icon_active_bg #FAFAFA;
 @define-color budgie_tasklist_indicator_color #D05858;
 @define-color budgie_tasklist_indicator_color_active #D05858;
-@define-color budgie_tasklist_indicator_color_active_window #de9ea0;
+@define-color budgie_tasklist_indicator_color_active_window #db9c9e;
 @define-color budgie_tasklist_indicator_color_attention #CE9C3D;
 @define-color STRAWBERRY_100 #FF9262;
 @define-color STRAWBERRY_300 #FF793E;
