--- a/src/gtk/sass/apps/_xfce4.scss
+++ b/src/gtk/sass/apps/_xfce4.scss
@@ -14,7 +14,7 @@ $text_shadow: 0 0 1px rgba(0, 0, 0, 0.26),
   background-color: transparent;
 
   &:hover:not(:active):not(:checked) {
-    color: if($variant == 'light' and $header == 'light', invert($selected_fg_color), $selected_fg_color);
+    color: if($variant == 'light' and $header == 'light', darken($panel_fg , 15%), lighten($panel_fg , 15%));
     box-shadow: inset 0 -2px rgba($selected_bg_color, 0.5);
   }
   &:checked {
@@ -315,3 +315,4 @@ window.thunar {
     }
   }
 }
+
