--- a/src/gtk/gtk-3.0/gtk-dark-purple.css
+++ b/src/gtk/gtk-3.0/gtk-dark-purple.css
@@ -80,9 +80,9 @@
 }
 
 button.gtkstyle-fallback:active, button.gtkstyle-fallback:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 .view, iconview {
@@ -295,7 +295,7 @@ entry image.right {
 entry:focus {
   background-clip: border-box;
   color: #C5CDD9;
-  border-color: #bb6ad5;
+  border-color: #D38AEA;
   background-color: #333648;
   outline: none;
 }
@@ -385,9 +385,9 @@ entry:drop(active):focus, entry:drop(active) {
 }
 
 .osd entry:focus {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 .osd entry:disabled {
@@ -476,9 +476,9 @@ button:hover {
 }
 
 button:active, button:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
   background-clip: padding-box;
   transition-duration: 50ms;
 }
@@ -512,13 +512,13 @@ button:disabled label, button:disabled {
 }
 
 button:disabled:active, button:disabled:checked {
-  border-color: rgba(187, 106, 213, 0.75);
-  background-color: rgba(187, 106, 213, 0.75);
+  border-color: rgba(211, 138, 234, 0.75);
+  background-color: rgba(211, 138, 234, 0.75);
   opacity: 0.6;
 }
 
 button:disabled:active label, button:disabled:active, button:disabled:checked label, button:disabled:checked {
-  color: rgba(250, 250, 250, 0.8);
+  color: rgba(51, 54, 72, 0.8);
 }
 
 button.image-button {
@@ -580,9 +580,9 @@ button.osd:hover {
 }
 
 button.osd:active, button.osd:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 button.osd:disabled {
@@ -605,9 +605,9 @@ button.osd:disabled {
 
 .osd button:active, .osd button:checked {
   background-clip: padding-box;
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 .osd button:disabled {
@@ -637,9 +637,9 @@ button.osd:disabled {
 }
 
 .osd button.flat:active, .osd button.flat:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 .osd .linked:not(.vertical):not(.path-bar) > button:hover:not(:checked):not(:active):not(:only-child), .osd .linked:not(.vertical):not(.path-bar) > button:hover:not(:checked):not(:active) + button:not(:checked):not(:active) {
@@ -799,9 +799,9 @@ button.font separator, button.file separator {
 }
 
 .inline-toolbar toolbutton > button:active, .inline-toolbar toolbutton > button:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 .inline-toolbar toolbutton > button:disabled {
@@ -814,13 +814,13 @@ button.font separator, button.file separator {
 }
 
 .inline-toolbar toolbutton > button:disabled:active, .inline-toolbar toolbutton > button:disabled:checked {
-  border-color: rgba(187, 106, 213, 0.75);
-  background-color: rgba(187, 106, 213, 0.75);
+  border-color: rgba(211, 138, 234, 0.75);
+  background-color: rgba(211, 138, 234, 0.75);
   opacity: 0.6;
 }
 
 .inline-toolbar toolbutton > button:disabled:active label, .inline-toolbar toolbutton > button:disabled:active, .inline-toolbar toolbutton > button:disabled:checked label, .inline-toolbar toolbutton > button:disabled:checked {
-  color: rgba(250, 250, 250, 0.8);
+  color: rgba(51, 54, 72, 0.8);
 }
 
 toolbar.inline-toolbar toolbutton:first-child > button.flat, .inline-toolbar toolbutton:first-child > button.flat {
@@ -1816,7 +1816,7 @@ window.thunar toolbar entry:backdrop, window.thunar .inline-toolbar entry:backdr
 
 window.thunar toolbar entry:focus, window.thunar .inline-toolbar entry:focus, .nemo-window .primary-toolbar entry:focus, headerbar entry:focus {
   color: #f6f6f8;
-  border-color: #bb6ad5;
+  border-color: #D38AEA;
   background-color: rgba(73, 74, 94, 0.42);
   background-clip: padding-box;
 }
@@ -1856,9 +1856,9 @@ window.thunar toolbar button:hover, window.thunar .inline-toolbar button:hover, 
 
 window.thunar toolbar button:active, window.thunar .inline-toolbar button:active, .caja-navigation-window toolbar#Toolbar.primary-toolbar button:active, .caja-navigation-window #Toolbar.primary-toolbar.inline-toolbar button:active, .nemo-window .primary-toolbar button:active, headerbar button:active, window.thunar toolbar button:checked, window.thunar .inline-toolbar button:checked, .caja-navigation-window toolbar#Toolbar.primary-toolbar button:checked, .caja-navigation-window #Toolbar.primary-toolbar.inline-toolbar button:checked, .nemo-window .primary-toolbar button:checked, headerbar button:checked {
   transition: 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  color: #FAFAFA;
+  color: #333648;
   border-color: transparent;
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
   background-clip: padding-box;
 }
 
@@ -1869,9 +1869,9 @@ window.thunar toolbar button:disabled, window.thunar .inline-toolbar button:disa
 }
 
 window.thunar toolbar button:disabled:active, window.thunar .inline-toolbar button:disabled:active, .caja-navigation-window toolbar#Toolbar.primary-toolbar button:disabled:active, .caja-navigation-window #Toolbar.primary-toolbar.inline-toolbar button:disabled:active, .nemo-window .primary-toolbar button:disabled:active, headerbar button:disabled:active, window.thunar toolbar button:disabled:checked, window.thunar .inline-toolbar button:disabled:checked, .caja-navigation-window toolbar#Toolbar.primary-toolbar button:disabled:checked, .caja-navigation-window #Toolbar.primary-toolbar.inline-toolbar button:disabled:checked, .nemo-window .primary-toolbar button:disabled:checked, headerbar button:disabled:checked {
-  color: rgba(250, 250, 250, 0.5);
-  border-color: rgba(187, 106, 213, 0.75);
-  background-color: rgba(187, 106, 213, 0.75);
+  color: rgba(51, 54, 72, 0.5);
+  border-color: rgba(211, 138, 234, 0.75);
+  background-color: rgba(211, 138, 234, 0.75);
 }
 
 .linked:not(.vertical):not(.path-bar):not(.stack-switcher) window.thunar toolbar button:not(:first-child):not(:only-child), window.thunar toolbar .linked:not(.vertical):not(.path-bar):not(.stack-switcher) button:not(:first-child):not(:only-child), .linked:not(.vertical):not(.path-bar):not(.stack-switcher) window.thunar .inline-toolbar button:not(:first-child):not(:only-child), window.thunar .inline-toolbar .linked:not(.vertical):not(.path-bar):not(.stack-switcher) button:not(:first-child):not(:only-child), .linked:not(.vertical):not(.path-bar):not(.stack-switcher) .caja-navigation-window toolbar#Toolbar.primary-toolbar button:not(:first-child):not(:only-child), .caja-navigation-window toolbar#Toolbar.primary-toolbar .linked:not(.vertical):not(.path-bar):not(.stack-switcher) button:not(:first-child):not(:only-child), .linked:not(.vertical):not(.path-bar):not(.stack-switcher) .caja-navigation-window #Toolbar.primary-toolbar.inline-toolbar button:not(:first-child):not(:only-child), .caja-navigation-window #Toolbar.primary-toolbar.inline-toolbar .linked:not(.vertical):not(.path-bar):not(.stack-switcher) button:not(:first-child):not(:only-child), .linked:not(.vertical):not(.path-bar):not(.stack-switcher) .nemo-window .primary-toolbar button:not(:first-child):not(:only-child), .nemo-window .primary-toolbar .linked:not(.vertical):not(.path-bar):not(.stack-switcher) button:not(:first-child):not(:only-child), .linked:not(.vertical):not(.path-bar):not(.stack-switcher) headerbar button:not(:first-child):not(:only-child), headerbar .linked:not(.vertical):not(.path-bar):not(.stack-switcher) button:not(:first-child):not(:only-child) {
@@ -2025,9 +2025,9 @@ headerbar .linked:not(.vertical):not(.path-bar).stack-switcher > button:hover {
 headerbar windowhandle .linked > button.toggle:not(.disclosure-button):active, headerbar windowhandle .linked > button.toggle:not(.disclosure-button):checked,
 headerbar .linked:not(.vertical):not(.path-bar).stack-switcher > button:active,
 headerbar .linked:not(.vertical):not(.path-bar).stack-switcher > button:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: transparent;
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 headerbar windowhandle .linked > button.toggle:not(.disclosure-button):disabled,
@@ -2171,9 +2171,9 @@ headerbar spinbutton:not(.vertical) button:hover {
 }
 
 headerbar spinbutton:not(.vertical) button:active, headerbar spinbutton:not(.vertical) button:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: transparent;
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 headerbar spinbutton:not(.vertical) button:disabled {
@@ -2219,7 +2219,7 @@ headerbar combobox > .linked > button.combo image, headerbar combobox > .linked 
 
 headerbar combobox > .linked > button.combo:hover {
   color: #f6f6f8;
-  border-color: #bb6ad5;
+  border-color: #D38AEA;
   background-color: rgba(73, 74, 94, 0.42);
   box-shadow: none;
 }
@@ -2596,14 +2596,14 @@ menu,
 }
 
 .csd menu, .csd .menu {
-  padding: 0px 0px;
-  border-radius: 0px;
+  padding: 4px 4px;
+  border-radius: 2px;
   border: none;
 }
 
 menu separator, .csd menu separator,
 .menu separator, .csd .menu separator {
-  margin: 0px 0px;
+  margin: 2px 2px;
   background-color: #2B2D3A;
 }
 
@@ -4032,9 +4032,9 @@ row:not(:hover) {
 }
 
 .app-notification button:active, .app-notification button:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
   background-clip: padding-box;
 }
 
@@ -4862,9 +4862,9 @@ headerbar button.titlebutton:hover {
 }
 
 headerbar button.titlebutton:active, headerbar button.titlebutton:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: transparent;
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 headerbar button.titlebutton.close, headerbar button.titlebutton.maximize, headerbar button.titlebutton.minimize, headerbar button.titlebutton.restore {
@@ -5299,9 +5299,9 @@ window.thunar toolbar .linked:not(.vertical):not(.stack-switcher).path-bar butto
     background-color: rgba(187, 192, 205, 0.18);
   }
   100% {
-    color: #FAFAFA;
+    color: #333648;
     border-color: transparent;
-    background-color: #bb6ad5;
+    background-color: #D38AEA;
   }
 }
 
@@ -6140,7 +6140,7 @@ headerbar.titlebar.incognito-mode entry image, headerbar.titlebar.incognito-mode
 
 headerbar.titlebar.incognito-mode entry:focus {
   color: #f6f6f8;
-  border-color: #bb6ad5;
+  border-color: #D38AEA;
   background-color: rgba(73, 74, 94, 0.42);
 }
 
@@ -6166,7 +6166,7 @@ notebook > box > stack > box.vertical > paned.vertical > overlay > .floating-bar
 
 .background headerbar entry.starred:focus, .background headerbar entry.non-starred:focus {
   color: #f6f6f8;
-  border-color: #bb6ad5;
+  border-color: #D38AEA;
   background-color: rgba(73, 74, 94, 0.42);
 }
 
@@ -6565,7 +6565,7 @@ dialog.background.csd box.dialog-vbox grid.horizontal stack scrolledwindow.frame
   border: 1px solid;
   border-radius: 3px;
   color: #C5CDD9;
-  border-color: #bb6ad5;
+  border-color: #D38AEA;
   background-color: #333648;
   outline: none;
 }
@@ -6844,9 +6844,9 @@ window.background.chromium headerbar.titlebar button.toggle:hover {
 }
 
 window.background.chromium headerbar.titlebar button.toggle:checked, window.background.chromium headerbar.titlebar button.toggle:active {
-  color: #FAFAFA;
+  color: #333648;
   border-color: transparent;
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 window.background.chromium headerbar.titlebar button.titlebutton {
@@ -7593,15 +7593,15 @@ window#MyControlCenter > frame > box.horizontal > widget > scrolledwindow.frame 
 }
 
 .drop-shadow button:active, .raven .raven-header:not(.top) button.image-button:active, .budgie-popover > frame > box.vertical > box.vertical > box.horizontal > button.image-button.toggle:active, .budgie-popover:not(.budgie-menu) button.flat:active:not(.image-button) {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 .drop-shadow button:checked, .raven .raven-header:not(.top) button.image-button:checked, .budgie-popover > frame > box.vertical > box.vertical > box.horizontal > button.image-button.toggle:checked, .budgie-popover:not(.budgie-menu) button.flat:checked:not(.image-button) {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 .drop-shadow button:disabled, .raven .raven-header:not(.top) button.image-button:disabled, .budgie-popover > frame > box.vertical > box.vertical > box.horizontal > button.image-button.toggle:disabled, .budgie-popover:not(.budgie-menu) button.flat:disabled:not(.image-button) {
@@ -7848,9 +7848,9 @@ window#MyControlCenter > frame > box.horizontal > widget > scrolledwindow.frame 
 }
 
 .budgie-popover.sound-popover buttonbox.linked > button:active, .budgie-popover.sound-popover buttonbox.linked > button:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 .budgie-popover.night-light-indicator .view-header {
@@ -8345,9 +8345,9 @@ frame.raven-frame > border {
 }
 
 .raven .raven-header.top stackswitcher button:active, .raven .raven-header.top stackswitcher button:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: transparent;
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 .raven .raven-header.top stackswitcher button:disabled {
@@ -9209,7 +9209,7 @@ MarlinViewWindow FMListView, MarlinViewWindow FMColumnView {
 
 .marlin-pathbar.pathbar:focus {
   color: #f6f6f8;
-  border-color: #bb6ad5;
+  border-color: #D38AEA;
   background-color: rgba(73, 74, 94, 0.42);
 }
 
@@ -9366,9 +9366,9 @@ scale.warmth trough {
 }
 
 #content_frame button:active, #content_frame button:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 #content_frame button:disabled {
@@ -9405,9 +9405,9 @@ scale.warmth trough {
 }
 
 #buttonbox_frame button:active, #buttonbox_frame button:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 #buttonbox_frame button:disabled {
@@ -9753,9 +9753,9 @@ filechooser placessidebar.sidebar row.sidebar-row:not(:selected) button.sidebar-
 
 filechooser placessidebar.sidebar row.sidebar-row:not(:selected) button.sidebar-button:active,
 .nautilus-window placessidebar.sidebar row.sidebar-row:not(:selected) button.sidebar-button:active {
-  color: #FAFAFA;
+  color: #333648;
   border-color: transparent;
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 filechooser placessidebar.sidebar row.sidebar-row:not(:selected) button.sidebar-button:not(:hover):not(:active) > image,
@@ -9826,9 +9826,9 @@ filechooser actionbar button:hover {
 }
 
 filechooser actionbar button:active, filechooser actionbar button:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 filechooser actionbar button:disabled {
@@ -9849,7 +9849,7 @@ filechooser actionbar entry {
 
 filechooser actionbar entry:focus {
   color: #C5CDD9;
-  border-color: #bb6ad5;
+  border-color: #D38AEA;
   background-color: #333648;
   outline: none;
 }
