--- a/src/gtk/gtk-3.0/gtk-light-red.css
+++ b/src/gtk/gtk-3.0/gtk-light-red.css
@@ -81,8 +81,8 @@
 
 button.gtkstyle-fallback:active, button.gtkstyle-fallback:checked {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
 }
 
 .view, iconview {
@@ -295,7 +295,7 @@ entry image.right {
 entry:focus {
   background-clip: border-box;
   color: #4F5868;
-  border-color: #d86062;
+  border-color: #D05858;
   background-color: #FAFAFA;
   outline: none;
 }
@@ -387,7 +387,7 @@ entry:drop(active):focus, entry:drop(active) {
 .osd entry:focus {
   color: #FAFAFA;
   border-color: rgba(0, 0, 0, 0.15);
-  background-color: #d86062;
+  background-color: #D05858;
 }
 
 .osd entry:disabled {
@@ -477,8 +477,8 @@ button:hover {
 
 button:active, button:checked {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
   background-clip: border-box;
   transition-duration: 50ms;
 }
@@ -512,8 +512,8 @@ button:disabled label, button:disabled {
 }
 
 button:disabled:active, button:disabled:checked {
-  border-color: rgba(216, 96, 98, 0.75);
-  background-color: rgba(216, 96, 98, 0.75);
+  border-color: rgba(208, 88, 88, 0.75);
+  background-color: rgba(208, 88, 88, 0.75);
   opacity: 0.6;
 }
 
@@ -581,8 +581,8 @@ button.osd:hover {
 
 button.osd:active, button.osd:checked {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
 }
 
 button.osd:disabled {
@@ -606,8 +606,8 @@ button.osd:disabled {
 .osd button:active, .osd button:checked {
   background-clip: padding-box;
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
 }
 
 .osd button:disabled {
@@ -638,8 +638,8 @@ button.osd:disabled {
 
 .osd button.flat:active, .osd button.flat:checked {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
 }
 
 .osd .linked:not(.vertical):not(.path-bar) > button:hover:not(:checked):not(:active):not(:only-child), .osd .linked:not(.vertical):not(.path-bar) > button:hover:not(:checked):not(:active) + button:not(:checked):not(:active) {
@@ -800,8 +800,8 @@ button.font separator, button.file separator {
 
 .inline-toolbar toolbutton > button:active, .inline-toolbar toolbutton > button:checked {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
 }
 
 .inline-toolbar toolbutton > button:disabled {
@@ -814,8 +814,8 @@ button.font separator, button.file separator {
 }
 
 .inline-toolbar toolbutton > button:disabled:active, .inline-toolbar toolbutton > button:disabled:checked {
-  border-color: rgba(216, 96, 98, 0.75);
-  background-color: rgba(216, 96, 98, 0.75);
+  border-color: rgba(208, 88, 88, 0.75);
+  background-color: rgba(208, 88, 88, 0.75);
   opacity: 0.6;
 }
 
@@ -1816,7 +1816,7 @@ window.thunar toolbar entry:backdrop, window.thunar .inline-toolbar entry:backdr
 
 window.thunar toolbar entry:focus, window.thunar .inline-toolbar entry:focus, .nemo-window .primary-toolbar entry:focus, headerbar entry:focus {
   color: #7a8292;
-  border-color: #d86062;
+  border-color: #D05858;
   background-color: #FAFAFA;
   background-clip: border-box;
 }
@@ -1857,8 +1857,8 @@ window.thunar toolbar button:hover, window.thunar .inline-toolbar button:hover, 
 window.thunar toolbar button:active, window.thunar .inline-toolbar button:active, .caja-navigation-window toolbar#Toolbar.primary-toolbar button:active, .caja-navigation-window #Toolbar.primary-toolbar.inline-toolbar button:active, .nemo-window .primary-toolbar button:active, headerbar button:active, window.thunar toolbar button:checked, window.thunar .inline-toolbar button:checked, .caja-navigation-window toolbar#Toolbar.primary-toolbar button:checked, .caja-navigation-window #Toolbar.primary-toolbar.inline-toolbar button:checked, .nemo-window .primary-toolbar button:checked, headerbar button:checked {
   transition: 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
   background-clip: border-box;
 }
 
@@ -1870,8 +1870,8 @@ window.thunar toolbar button:disabled, window.thunar .inline-toolbar button:disa
 
 window.thunar toolbar button:disabled:active, window.thunar .inline-toolbar button:disabled:active, .caja-navigation-window toolbar#Toolbar.primary-toolbar button:disabled:active, .caja-navigation-window #Toolbar.primary-toolbar.inline-toolbar button:disabled:active, .nemo-window .primary-toolbar button:disabled:active, headerbar button:disabled:active, window.thunar toolbar button:disabled:checked, window.thunar .inline-toolbar button:disabled:checked, .caja-navigation-window toolbar#Toolbar.primary-toolbar button:disabled:checked, .caja-navigation-window #Toolbar.primary-toolbar.inline-toolbar button:disabled:checked, .nemo-window .primary-toolbar button:disabled:checked, headerbar button:disabled:checked {
   color: rgba(250, 250, 250, 0.5);
-  border-color: rgba(216, 96, 98, 0.75);
-  background-color: rgba(216, 96, 98, 0.75);
+  border-color: rgba(208, 88, 88, 0.75);
+  background-color: rgba(208, 88, 88, 0.75);
 }
 
 .linked:not(.vertical):not(.path-bar):not(.stack-switcher) window.thunar toolbar button:not(:first-child):not(:only-child), window.thunar toolbar .linked:not(.vertical):not(.path-bar):not(.stack-switcher) button:not(:first-child):not(:only-child), .linked:not(.vertical):not(.path-bar):not(.stack-switcher) window.thunar .inline-toolbar button:not(:first-child):not(:only-child), window.thunar .inline-toolbar .linked:not(.vertical):not(.path-bar):not(.stack-switcher) button:not(:first-child):not(:only-child), .linked:not(.vertical):not(.path-bar):not(.stack-switcher) .caja-navigation-window toolbar#Toolbar.primary-toolbar button:not(:first-child):not(:only-child), .caja-navigation-window toolbar#Toolbar.primary-toolbar .linked:not(.vertical):not(.path-bar):not(.stack-switcher) button:not(:first-child):not(:only-child), .linked:not(.vertical):not(.path-bar):not(.stack-switcher) .caja-navigation-window #Toolbar.primary-toolbar.inline-toolbar button:not(:first-child):not(:only-child), .caja-navigation-window #Toolbar.primary-toolbar.inline-toolbar .linked:not(.vertical):not(.path-bar):not(.stack-switcher) button:not(:first-child):not(:only-child), .linked:not(.vertical):not(.path-bar):not(.stack-switcher) .nemo-window .primary-toolbar button:not(:first-child):not(:only-child), .nemo-window .primary-toolbar .linked:not(.vertical):not(.path-bar):not(.stack-switcher) button:not(:first-child):not(:only-child), .linked:not(.vertical):not(.path-bar):not(.stack-switcher) headerbar button:not(:first-child):not(:only-child), headerbar .linked:not(.vertical):not(.path-bar):not(.stack-switcher) button:not(:first-child):not(:only-child) {
@@ -2026,8 +2026,8 @@ headerbar windowhandle .linked > button.toggle:not(.disclosure-button):active, h
 headerbar .linked:not(.vertical):not(.path-bar).stack-switcher > button:active,
 headerbar .linked:not(.vertical):not(.path-bar).stack-switcher > button:checked {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
 }
 
 headerbar windowhandle .linked > button.toggle:not(.disclosure-button):disabled,
@@ -2172,8 +2172,8 @@ headerbar spinbutton:not(.vertical) button:hover {
 
 headerbar spinbutton:not(.vertical) button:active, headerbar spinbutton:not(.vertical) button:checked {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
 }
 
 headerbar spinbutton:not(.vertical) button:disabled {
@@ -2219,7 +2219,7 @@ headerbar combobox > .linked > button.combo image, headerbar combobox > .linked 
 
 headerbar combobox > .linked > button.combo:hover {
   color: #7a8292;
-  border-color: #d86062;
+  border-color: #D05858;
   background-color: #FAFAFA;
   box-shadow: none;
 }
@@ -2597,14 +2597,14 @@ menu,
 }
 
 .csd menu, .csd .menu {
-  padding: 0px 0px;
-  border-radius: 0px;
+  padding: 4px 4px;
+  border-radius: 2px;
   border: none;
 }
 
 menu separator, .csd menu separator,
 .menu separator, .csd .menu separator {
-  margin: 0px 0px;
+  margin: 2px 2px;
   background-color: #FAFAFA;
 }
 
@@ -4034,8 +4034,8 @@ row:not(:hover) {
 
 .app-notification button:active, .app-notification button:checked {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
   background-clip: padding-box;
 }
 
@@ -4864,8 +4864,8 @@ headerbar button.titlebutton:hover {
 
 headerbar button.titlebutton:active, headerbar button.titlebutton:checked {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
 }
 
 headerbar button.titlebutton.close, headerbar button.titlebutton.maximize, headerbar button.titlebutton.minimize, headerbar button.titlebutton.restore {
@@ -5301,8 +5301,8 @@ window.thunar toolbar .linked:not(.vertical):not(.stack-switcher).path-bar butto
   }
   100% {
     color: #FAFAFA;
-    border-color: #d86062;
-    background-color: #d86062;
+    border-color: #D05858;
+    background-color: #D05858;
   }
 }
 
@@ -6142,7 +6142,7 @@ headerbar.titlebar.incognito-mode entry image, headerbar.titlebar.incognito-mode
 
 headerbar.titlebar.incognito-mode entry:focus {
   color: #7a8292;
-  border-color: #d86062;
+  border-color: #D05858;
   background-color: #FAFAFA;
 }
 
@@ -6168,7 +6168,7 @@ notebook > box > stack > box.vertical > paned.vertical > overlay > .floating-bar
 
 .background headerbar entry.starred:focus, .background headerbar entry.non-starred:focus {
   color: #7a8292;
-  border-color: #d86062;
+  border-color: #D05858;
   background-color: #FAFAFA;
 }
 
@@ -6568,7 +6568,7 @@ dialog.background.csd box.dialog-vbox grid.horizontal stack scrolledwindow.frame
   border: 1px solid;
   border-radius: 3px;
   color: #4F5868;
-  border-color: #d86062;
+  border-color: #D05858;
   background-color: #FAFAFA;
   outline: none;
 }
@@ -6849,8 +6849,8 @@ window.background.chromium headerbar.titlebar button.toggle:hover {
 
 window.background.chromium headerbar.titlebar button.toggle:checked, window.background.chromium headerbar.titlebar button.toggle:active {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
 }
 
 window.background.chromium headerbar.titlebar button.titlebutton {
@@ -7598,14 +7598,14 @@ window#MyControlCenter > frame > box.horizontal > widget > scrolledwindow.frame 
 
 .drop-shadow button:active, .raven .raven-header:not(.top) button.image-button:active, .budgie-popover > frame > box.vertical > box.vertical > box.horizontal > button.image-button.toggle:active, .budgie-popover:not(.budgie-menu) button.flat:active:not(.image-button) {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
 }
 
 .drop-shadow button:checked, .raven .raven-header:not(.top) button.image-button:checked, .budgie-popover > frame > box.vertical > box.vertical > box.horizontal > button.image-button.toggle:checked, .budgie-popover:not(.budgie-menu) button.flat:checked:not(.image-button) {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
 }
 
 .drop-shadow button:disabled, .raven .raven-header:not(.top) button.image-button:disabled, .budgie-popover > frame > box.vertical > box.vertical > box.horizontal > button.image-button.toggle:disabled, .budgie-popover:not(.budgie-menu) button.flat:disabled:not(.image-button) {
@@ -7853,8 +7853,8 @@ window#MyControlCenter > frame > box.horizontal > widget > scrolledwindow.frame 
 
 .budgie-popover.sound-popover buttonbox.linked > button:active, .budgie-popover.sound-popover buttonbox.linked > button:checked {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
 }
 
 .budgie-popover.night-light-indicator .view-header {
@@ -8350,8 +8350,8 @@ frame.raven-frame > border {
 
 .raven .raven-header.top stackswitcher button:active, .raven .raven-header.top stackswitcher button:checked {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
 }
 
 .raven .raven-header.top stackswitcher button:disabled {
@@ -9215,7 +9215,7 @@ MarlinViewWindow FMListView, MarlinViewWindow FMColumnView {
 
 .marlin-pathbar.pathbar:focus {
   color: #7a8292;
-  border-color: #d86062;
+  border-color: #D05858;
   background-color: #FAFAFA;
 }
 
@@ -9373,8 +9373,8 @@ scale.warmth trough {
 
 #content_frame button:active, #content_frame button:checked {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
 }
 
 #content_frame button:disabled {
@@ -9412,8 +9412,8 @@ scale.warmth trough {
 
 #buttonbox_frame button:active, #buttonbox_frame button:checked {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
 }
 
 #buttonbox_frame button:disabled {
@@ -9760,8 +9760,8 @@ filechooser placessidebar.sidebar row.sidebar-row:not(:selected) button.sidebar-
 filechooser placessidebar.sidebar row.sidebar-row:not(:selected) button.sidebar-button:active,
 .nautilus-window placessidebar.sidebar row.sidebar-row:not(:selected) button.sidebar-button:active {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
 }
 
 filechooser placessidebar.sidebar row.sidebar-row:not(:selected) button.sidebar-button:not(:hover):not(:active) > image,
@@ -9833,8 +9833,8 @@ filechooser actionbar button:hover {
 
 filechooser actionbar button:active, filechooser actionbar button:checked {
   color: #FAFAFA;
-  border-color: #d86062;
-  background-color: #d86062;
+  border-color: #D05858;
+  background-color: #D05858;
 }
 
 filechooser actionbar button:disabled {
@@ -9855,7 +9855,7 @@ filechooser actionbar entry {
 
 filechooser actionbar entry:focus {
   color: #4F5868;
-  border-color: #d86062;
+  border-color: #D05858;
   background-color: #FAFAFA;
   outline: none;
 }
