--- a/src/gtk/gtk-4.0/gtk-cyan.css
+++ b/src/gtk/gtk-4.0/gtk-cyan.css
@@ -366,7 +366,7 @@ spinbutton.vertical > text:focus-within, spinbutton:focus-within:not(.vertical),
 entry:focus-within {
   background-clip: border-box;
   color: #4F5868;
-  border-color: #459996;
+  border-color: #3A8B84;
   background-color: #FAFAFA;
   outline: none;
 }
@@ -576,7 +576,7 @@ entry:drop(active) {
 .osd spinbutton.vertical > text:focus-within, .osd spinbutton:focus-within:not(.vertical), .osd entry:focus-within {
   color: #FAFAFA;
   border-color: rgba(0, 0, 0, 0.15);
-  background-color: #459996;
+  background-color: #3A8B84;
 }
 
 .osd spinbutton.vertical > text:disabled, .osd spinbutton:disabled:not(.vertical), .osd entry:disabled {
@@ -753,8 +753,8 @@ button:hover {
 button:active,
 button:checked {
   color: #FAFAFA;
-  border-color: #459996;
-  background-color: #459996;
+  border-color: #3A8B84;
+  background-color: #3A8B84;
   background-clip: border-box;
   transition-duration: 50ms;
 }
@@ -800,8 +800,8 @@ button:disabled {
 
 button:disabled:active,
 button:disabled:checked {
-  border-color: rgba(69, 153, 150, 0.75);
-  background-color: rgba(69, 153, 150, 0.75);
+  border-color: rgba(58, 139, 132, 0.75);
+  background-color: rgba(58, 139, 132, 0.75);
   opacity: 0.6;
 }
 
@@ -889,7 +889,7 @@ button.osd:active,
 button.osd:checked {
   color: #FAFAFA;
   border-color: rgba(0, 0, 0, 0.15);
-  background-color: #459996;
+  background-color: #3A8B84;
 }
 
 
@@ -916,7 +916,7 @@ popover.background.touch-selection button:active, popover.background.magnifier b
   background-clip: padding-box;
   color: #FAFAFA;
   border-color: rgba(0, 0, 0, 0.15);
-  background-color: #459996;
+  background-color: #3A8B84;
 }
 
 popover.background.touch-selection button:disabled, popover.background.magnifier button:disabled, .osd button:disabled {
@@ -948,7 +948,7 @@ popover.background.touch-selection button.flat:disabled, popover.background.magn
 popover.background.touch-selection button.flat:active, popover.background.magnifier button.flat:active, popover.background.touch-selection button.flat:checked, popover.background.magnifier button.flat:checked, .osd button.flat:active, .osd button.flat:checked {
   color: #FAFAFA;
   border-color: rgba(0, 0, 0, 0.15);
-  background-color: #459996;
+  background-color: #3A8B84;
 }
 
 .osd .linked:not(.vertical):not(.path-bar) > button:hover:not(:checked):not(:active):not(:only-child), .osd .linked:not(.vertical):not(.path-bar) > button:hover:not(:checked):not(:active) + button:not(:checked):not(:active) {
@@ -1833,8 +1833,8 @@ popover.menu box.circular-buttons button.circular.image-button.model:active, pop
 list > row button.image-button:not(.flat):active,
 list > row button.image-button:not(.flat):checked {
   color: #FAFAFA;
-  border-color: #459996;
-  background-color: #459996;
+  border-color: #3A8B84;
+  background-color: #3A8B84;
 }
 
 popover.menu box.circular-buttons button.suggested-action.circular.image-button.model,
@@ -2116,7 +2116,7 @@ spinbutton.vertical > button.down {
 .osd spinbutton.vertical > button:first-child:active {
   color: #FAFAFA;
   border-color: rgba(0, 0, 0, 0.15);
-  background-color: #459996;
+  background-color: #3A8B84;
 }
 
 .osd spinbutton.vertical > button:first-child:disabled {
@@ -2324,16 +2324,16 @@ toolbar.osd.right {
 .toolbar button:active,
 .toolbar menubutton > button:active {
   color: #FAFAFA;
-  border-color: #459996;
-  background-color: #459996;
+  border-color: #3A8B84;
+  background-color: #3A8B84;
 }
 
 
 .toolbar button:checked,
 .toolbar menubutton > button:checked {
   color: #FAFAFA;
-  border-color: #459996;
-  background-color: #459996;
+  border-color: #3A8B84;
+  background-color: #3A8B84;
 }
 
 
@@ -2445,7 +2445,7 @@ actionbar > revealer > box splitbutton {
 
 .sidebar-pane entry:focus-within, headerbar entry:focus-within {
   color: #eef1f3;
-  border-color: #459996;
+  border-color: #3A8B84;
   background-color: rgba(72, 76, 90, 0.42);
   background-clip: border-box;
 }
@@ -2486,8 +2486,8 @@ actionbar > revealer > box splitbutton {
 .sidebar-pane button:active, headerbar button:active, .sidebar-pane button:checked, headerbar button:checked {
   transition: 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
   color: #FAFAFA;
-  border-color: #459996;
-  background-color: #459996;
+  border-color: #3A8B84;
+  background-color: #3A8B84;
   background-clip: padding-box;
 }
 
@@ -2499,8 +2499,8 @@ actionbar > revealer > box splitbutton {
 
 .sidebar-pane button:disabled:active, headerbar button:disabled:active, .sidebar-pane button:disabled:checked, headerbar button:disabled:checked {
   color: rgba(250, 250, 250, 0.5);
-  border-color: rgba(69, 153, 150, 0.75);
-  background-color: rgba(69, 153, 150, 0.75);
+  border-color: rgba(58, 139, 132, 0.75);
+  background-color: rgba(58, 139, 132, 0.75);
 }
 
 .sidebar-pane .linked.raised > button:not(:last-child):not(:only-child), headerbar .linked.raised > button:not(:last-child):not(:only-child) {
@@ -2533,7 +2533,7 @@ headerbar popover > contents entry {
 
 headerbar popover > contents entry:focus-within {
   color: #4F5868;
-  border-color: #459996;
+  border-color: #3A8B84;
   background-color: #FAFAFA;
   outline: none;
 }
@@ -2559,8 +2559,8 @@ headerbar popover > contents button:hover {
 
 headerbar popover > contents button:active, headerbar popover > contents button:checked {
   color: #FAFAFA;
-  border-color: #459996;
-  background-color: #459996;
+  border-color: #3A8B84;
+  background-color: #3A8B84;
 }
 
 headerbar popover > contents button:disabled {
@@ -2573,8 +2573,8 @@ headerbar popover > contents button:disabled label, headerbar popover > contents
 }
 
 headerbar popover > contents button:disabled:active, headerbar popover > contents button:disabled:checked {
-  border-color: rgba(69, 153, 150, 0.75);
-  background-color: rgba(69, 153, 150, 0.75);
+  border-color: rgba(58, 139, 132, 0.75);
+  background-color: rgba(58, 139, 132, 0.75);
   opacity: 0.6;
 }
 
@@ -2744,8 +2744,8 @@ headerbar buttonbox.linked > button:active, headerbar buttonbox.linked > button:
 headerbar stackswitcher.linked > button:active,
 headerbar stackswitcher.linked > button:checked {
   color: #FAFAFA;
-  border-color: #459996;
-  background-color: #459996;
+  border-color: #3A8B84;
+  background-color: #3A8B84;
 }
 
 headerbar buttonbox.linked > button:disabled,
@@ -2894,8 +2894,8 @@ headerbar spinbutton:not(.vertical) button:hover {
 
 headerbar spinbutton:not(.vertical) button:active, headerbar spinbutton:not(.vertical) button:checked {
   color: #FAFAFA;
-  border-color: #459996;
-  background-color: #459996;
+  border-color: #3A8B84;
+  background-color: #3A8B84;
 }
 
 headerbar spinbutton:not(.vertical) button:disabled {
@@ -2941,7 +2941,7 @@ headerbar combobox > .linked > button.combo image, headerbar combobox > .linked 
 
 headerbar combobox > .linked > button.combo:hover {
   color: #eef1f3;
-  border-color: #459996;
+  border-color: #3A8B84;
   background-color: rgba(72, 76, 90, 0.42);
   box-shadow: none;
 }
@@ -4990,7 +4990,7 @@ columnview row:not(:selected) cell editablelabel.editing text selection {
 .app-notification button:active, .app-notification button:checked {
   color: #FAFAFA;
   border-color: rgba(0, 0, 0, 0.15);
-  background-color: #459996;
+  background-color: #3A8B84;
   background-clip: padding-box;
 }
 
@@ -6430,14 +6430,14 @@ button.card:hover {
 
 button.card.keyboard-activating, button.card:active {
   color: #FAFAFA;
-  border-color: #459996;
-  background-color: #459996;
+  border-color: #3A8B84;
+  background-color: #3A8B84;
 }
 
 button.card:checked {
   color: #FAFAFA;
-  border-color: #459996;
-  background-color: #459996;
+  border-color: #3A8B84;
+  background-color: #3A8B84;
 }
 
 button.card:drop(active) {
@@ -7522,8 +7522,8 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 
 .sidebar-pane .navigation-sidebar > row:not(:selected) button.sidebar-button:active {
   color: #FAFAFA;
-  border-color: #459996;
-  background-color: #459996;
+  border-color: #3A8B84;
+  background-color: #3A8B84;
 }
 
 .sidebar-pane .navigation-sidebar > row:not(:selected) button.sidebar-button:not(:hover):not(:active) > image {
@@ -7852,7 +7852,7 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 
 .content-pane headerbar entry:focus-within {
   color: #4F5868;
-  border-color: #459996;
+  border-color: #3A8B84;
   background-color: #FAFAFA;
   outline: none;
 }
@@ -7879,8 +7879,8 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 
 .content-pane headerbar button:not(.close):not(.maximize):not(.minimize):active, .content-pane headerbar button:not(.close):not(.maximize):not(.minimize):checked {
   color: #FAFAFA;
-  border-color: #459996;
-  background-color: #459996;
+  border-color: #3A8B84;
+  background-color: #3A8B84;
 }
 
 .content-pane headerbar button:not(.close):not(.maximize):not(.minimize):disabled {
@@ -7888,8 +7888,8 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 }
 
 .content-pane headerbar button:not(.close):not(.maximize):not(.minimize):disabled:active, .content-pane headerbar button:not(.close):not(.maximize):not(.minimize):disabled:checked {
-  border-color: rgba(69, 153, 150, 0.75);
-  background-color: rgba(69, 153, 150, 0.75);
+  border-color: rgba(58, 139, 132, 0.75);
+  background-color: rgba(58, 139, 132, 0.75);
   opacity: 0.6;
 }
 
@@ -8108,8 +8108,8 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 
 .nautilus-window .sidebar-pane .navigation-sidebar > row:not(:selected) button.sidebar-button:active, .nautilus-window flap .navigation-sidebar > row:not(:selected) button.sidebar-button:active {
   color: #FAFAFA;
-  border-color: #459996;
-  background-color: #459996;
+  border-color: #3A8B84;
+  background-color: #3A8B84;
 }
 
 .nautilus-window .sidebar-pane .navigation-sidebar > row:not(:selected) button.sidebar-button:not(:hover):not(:active) > image, .nautilus-window flap .navigation-sidebar > row:not(:selected) button.sidebar-button:not(:hover):not(:active) > image {
