--- a/src/gtk/gtk-4.0/gtk-dark-purple.css
+++ b/src/gtk/gtk-4.0/gtk-dark-purple.css
@@ -366,7 +366,7 @@ spinbutton.vertical > text:focus-within, spinbutton:focus-within:not(.vertical),
 entry:focus-within {
   background-clip: padding-box;
   color: #C5CDD9;
-  border-color: #bb6ad5;
+  border-color: #D38AEA;
   background-color: #333648;
   outline: none;
 }
@@ -574,9 +574,9 @@ entry:drop(active) {
 }
 
 .osd spinbutton.vertical > text:focus-within, .osd spinbutton:focus-within:not(.vertical), .osd entry:focus-within {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 .osd spinbutton.vertical > text:disabled, .osd spinbutton:disabled:not(.vertical), .osd entry:disabled {
@@ -752,9 +752,9 @@ button:hover {
 
 button:active,
 button:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
   background-clip: padding-box;
   transition-duration: 50ms;
 }
@@ -800,8 +800,8 @@ button:disabled {
 
 button:disabled:active,
 button:disabled:checked {
-  border-color: rgba(187, 106, 213, 0.75);
-  background-color: rgba(187, 106, 213, 0.75);
+  border-color: rgba(211, 138, 234, 0.75);
+  background-color: rgba(211, 138, 234, 0.75);
   opacity: 0.6;
 }
 
@@ -810,7 +810,7 @@ button:disabled:active label,
 button:disabled:active,
 button:disabled:checked label,
 button:disabled:checked {
-  color: rgba(250, 250, 250, 0.8);
+  color: rgba(51, 54, 72, 0.8);
 }
 
 
@@ -887,9 +887,9 @@ button.osd:hover {
 
 button.osd:active,
 button.osd:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 
@@ -914,9 +914,9 @@ popover.background.touch-selection button:hover, popover.background.magnifier bu
 
 popover.background.touch-selection button:active, popover.background.magnifier button:active, popover.background.touch-selection button:checked, popover.background.magnifier button:checked, .osd button:active, .osd button:checked {
   background-clip: padding-box;
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 popover.background.touch-selection button:disabled, popover.background.magnifier button:disabled, .osd button:disabled {
@@ -946,9 +946,9 @@ popover.background.touch-selection button.flat:disabled, popover.background.magn
 }
 
 popover.background.touch-selection button.flat:active, popover.background.magnifier button.flat:active, popover.background.touch-selection button.flat:checked, popover.background.magnifier button.flat:checked, .osd button.flat:active, .osd button.flat:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 .osd .linked:not(.vertical):not(.path-bar) > button:hover:not(:checked):not(:active):not(:only-child), .osd .linked:not(.vertical):not(.path-bar) > button:hover:not(:checked):not(:active) + button:not(:checked):not(:active) {
@@ -1832,9 +1832,9 @@ list > row button.image-button:not(.flat):hover {
 popover.menu box.circular-buttons button.circular.image-button.model:active, popover.menu box.circular-buttons button.circular.image-button.model:checked,
 list > row button.image-button:not(.flat):active,
 list > row button.image-button:not(.flat):checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 popover.menu box.circular-buttons button.suggested-action.circular.image-button.model,
@@ -2114,9 +2114,9 @@ spinbutton.vertical > button.down {
 }
 
 .osd spinbutton.vertical > button:first-child:active {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 .osd spinbutton.vertical > button:first-child:disabled {
@@ -2323,17 +2323,17 @@ toolbar.osd.right {
 
 .toolbar button:active,
 .toolbar menubutton > button:active {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 
 .toolbar button:checked,
 .toolbar menubutton > button:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 
@@ -2445,7 +2445,7 @@ actionbar > revealer > box splitbutton {
 
 .sidebar-pane entry:focus-within, headerbar entry:focus-within {
   color: #f6f6f8;
-  border-color: #bb6ad5;
+  border-color: #D38AEA;
   background-color: rgba(73, 74, 94, 0.42);
   background-clip: padding-box;
 }
@@ -2485,9 +2485,9 @@ actionbar > revealer > box splitbutton {
 
 .sidebar-pane button:active, headerbar button:active, .sidebar-pane button:checked, headerbar button:checked {
   transition: 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  color: #FAFAFA;
+  color: #333648;
   border-color: transparent;
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
   background-clip: padding-box;
 }
 
@@ -2498,9 +2498,9 @@ actionbar > revealer > box splitbutton {
 }
 
 .sidebar-pane button:disabled:active, headerbar button:disabled:active, .sidebar-pane button:disabled:checked, headerbar button:disabled:checked {
-  color: rgba(250, 250, 250, 0.5);
-  border-color: rgba(187, 106, 213, 0.75);
-  background-color: rgba(187, 106, 213, 0.75);
+  color: rgba(51, 54, 72, 0.5);
+  border-color: rgba(211, 138, 234, 0.75);
+  background-color: rgba(211, 138, 234, 0.75);
 }
 
 .sidebar-pane .linked.raised > button:not(:last-child):not(:only-child), headerbar .linked.raised > button:not(:last-child):not(:only-child) {
@@ -2533,7 +2533,7 @@ headerbar popover > contents entry {
 
 headerbar popover > contents entry:focus-within {
   color: #C5CDD9;
-  border-color: #bb6ad5;
+  border-color: #D38AEA;
   background-color: #333648;
   outline: none;
 }
@@ -2558,9 +2558,9 @@ headerbar popover > contents button:hover {
 }
 
 headerbar popover > contents button:active, headerbar popover > contents button:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 headerbar popover > contents button:disabled {
@@ -2573,13 +2573,13 @@ headerbar popover > contents button:disabled label, headerbar popover > contents
 }
 
 headerbar popover > contents button:disabled:active, headerbar popover > contents button:disabled:checked {
-  border-color: rgba(187, 106, 213, 0.75);
-  background-color: rgba(187, 106, 213, 0.75);
+  border-color: rgba(211, 138, 234, 0.75);
+  background-color: rgba(211, 138, 234, 0.75);
   opacity: 0.6;
 }
 
 headerbar popover > contents button:disabled:active label, headerbar popover > contents button:disabled:active, headerbar popover > contents button:disabled:checked label, headerbar popover > contents button:disabled:checked {
-  color: rgba(250, 250, 250, 0.8);
+  color: rgba(51, 54, 72, 0.8);
 }
 
 headerbar {
@@ -2743,9 +2743,9 @@ headerbar stackswitcher.linked > button:hover {
 headerbar buttonbox.linked > button:active, headerbar buttonbox.linked > button:checked,
 headerbar stackswitcher.linked > button:active,
 headerbar stackswitcher.linked > button:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: transparent;
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 headerbar buttonbox.linked > button:disabled,
@@ -2893,9 +2893,9 @@ headerbar spinbutton:not(.vertical) button:hover {
 }
 
 headerbar spinbutton:not(.vertical) button:active, headerbar spinbutton:not(.vertical) button:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: transparent;
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 headerbar spinbutton:not(.vertical) button:disabled {
@@ -2941,7 +2941,7 @@ headerbar combobox > .linked > button.combo image, headerbar combobox > .linked 
 
 headerbar combobox > .linked > button.combo:hover {
   color: #f6f6f8;
-  border-color: #bb6ad5;
+  border-color: #D38AEA;
   background-color: rgba(73, 74, 94, 0.42);
   box-shadow: none;
 }
@@ -4988,9 +4988,9 @@ columnview row:not(:selected) cell editablelabel.editing text selection {
 }
 
 .app-notification button:active, .app-notification button:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
   background-clip: padding-box;
 }
 
@@ -6429,15 +6429,15 @@ button.card:hover {
 }
 
 button.card.keyboard-activating, button.card:active {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 button.card:checked {
-  color: #FAFAFA;
+  color: #333648;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 button.card:drop(active) {
@@ -7521,9 +7521,9 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 }
 
 .sidebar-pane .navigation-sidebar > row:not(:selected) button.sidebar-button:active {
-  color: #FAFAFA;
+  color: #333648;
   border-color: transparent;
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 .sidebar-pane .navigation-sidebar > row:not(:selected) button.sidebar-button:not(:hover):not(:active) > image {
@@ -7988,9 +7988,9 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 }
 
 .nautilus-window .sidebar-pane .navigation-sidebar > row:not(:selected) button.sidebar-button:active, .nautilus-window flap .navigation-sidebar > row:not(:selected) button.sidebar-button:active {
-  color: #FAFAFA;
+  color: #333648;
   border-color: transparent;
-  background-color: #bb6ad5;
+  background-color: #D38AEA;
 }
 
 .nautilus-window .sidebar-pane .navigation-sidebar > row:not(:selected) button.sidebar-button:not(:hover):not(:active) > image, .nautilus-window flap .navigation-sidebar > row:not(:selected) button.sidebar-button:not(:hover):not(:active) > image {
