--- a/src/gtk/sass/_drawing.scss
+++ b/src/gtk/sass/_drawing.scss
@@ -112,7 +112,7 @@
   // focused entry
   //
     color: $text_color;
-    border-color: $selected_bg_color;
+    border-color: $accent_color;
     background-color: $entry_bg;
     outline: none;
   }
@@ -143,7 +143,7 @@
   // focused header-bar entry
   //
     color: lighten($header_fg, 20%);
-    border-color: $selected_bg_color;
+    border-color: $accent_color;
     background-color: if($header == 'light', $header_entry_bg, darken($header_entry_bg, 6%));
   }
 
@@ -171,9 +171,9 @@
   //
   // active osd entry
   //
-    color: $selected_fg_color;
+    color: $base_color;
     border-color: $osd_entry_border;
-    background-color: $selected_bg_color;
+    background-color: $accent_color;
   }
 
   @else if $t==osd-insensitive {
@@ -216,18 +216,18 @@
   //
   // pushed button
   //
-    color: $selected_fg_color;
-    border-color: if($variant=='light', $selected_bg_color, $button_border);
-    background-color: $selected_bg_color;
+    color: $base_color;
+    border-color: if($variant=='light', $accent_color, $button_border);
+    background-color: $accent_color;
   }
 
   @else if $t==checked {
     //
     // pushed button
     //
-    color: $selected_fg_color;
-    border-color: if($variant=='light', $selected_bg_color, $button_border);
-    background-color: $selected_bg_color;
+    color: $base_color;
+    border-color: if($variant=='light', $accent_color, $button_border);
+    background-color: $accent_color;
   }
 
   @else if $t==insensitive {
@@ -244,10 +244,10 @@
   //
   // insensitive pushed button
   //
-    label, & { color: rgba($selected_fg_color, 0.8); }
+    label, & { color: rgba($base_color, 0.8); }
 
-    border-color: rgba($selected_bg_color, 0.75);
-    background-color: rgba($selected_bg_color, 0.75);
+    border-color: rgba($accent_color, 0.75);
+    background-color: rgba($accent_color, 0.75);
 
     opacity: 0.6;
   }
@@ -275,9 +275,9 @@
   //
   // pushed header-bar button
   //
-    color: $selected_fg_color;
-    border-color: if($variant=='light', $selected_bg_color, transparent);
-    background-color: $selected_bg_color;
+    color: $base_color;
+    border-color: if($variant=='light', $accent_color, transparent);
+    background-color: $accent_color;
   }
 
   @else if $t==header-insensitive {
@@ -293,9 +293,9 @@
   //
   // header-bar insensitive pushed button
   //
-    color: rgba($selected_fg_color, 0.5);
-    border-color: rgba($selected_bg_color, 0.75);
-    background-color: rgba($selected_bg_color, 0.75);
+    color: rgba($base_color, 0.5);
+    border-color: rgba($accent_color, 0.75);
+    background-color: rgba($accent_color, 0.75);
   }
 
   @else if $t==osd {
@@ -320,9 +320,9 @@
   //
   // active osd button
   //
-    color: $selected_fg_color;
-    border-color: if($header == 'light', $selected_bg_color, $osd_button_border);
-    background-color: $selected_bg_color;
+    color: $base_color;
+    border-color: if($header == 'light', $accent_color, $osd_button_border);
+    background-color: $accent_color;
   }
 
   @else if $t==osd-insensitive {
